
 * Add support for ``patiencediff`` algorithm in diff.
   (Jelmer Vernooĳ, #1795)

 * Add IPv6 support for git:// protocol URLs.
   (Jelmer Vernooĳ, #1796)

 * Add support for ``core.preloadIndex`` configuration setting to enable
   parallel stat operations when checking for unstaged changes. This improves
   performance on slow filesystems like NFS. (Jelmer Vernooĳ, #1851)

0.24.1	2025-08-01

 * Require ``typing_extensions`` on Python 3.10.
   (Jelmer Vernooĳ, #1735)

0.24.0	2025-08-01

 * Split out ``WorkTree`` from ``Repo``. (Jelmer Vernooĳ)

 * Add comprehensive git worktree support including ``WorkTreeContainer``
   class, ``WorkTreeInfo`` objects, and full CLI/porcelain implementations
   for add, list, remove, prune, lock, unlock, and move operations.
   (Jelmer Vernooĳ, #1710, #1632)

 * Add support for ``-a`` argument to
   ``dulwich.cli.commit``. (Jelmer Vernooĳ)

 * Add support for ``--amend`` argument to
   ``dulwich.cli.commit`` and ``dulwich.porcelain.commit``. (Jelmer Vernooĳ)

 * Add support for merge drivers.
   (Jelmer Vernooĳ)

 * Add support for Git revision syntax operators ``~``, ``^``, ``^{}``,
   ``@{N}``, and ``:path`` in ``dulwich.objectspec.parse_object``,
   e.g. ``HEAD~1``, ``HEAD^2``, ``v1.0^{}``, ``HEAD@{1}``, ``HEAD:README``.
   (Jelmer Vernooĳ)

 * Add support for ``GIT_CONFIG_GLOBAL`` and ``GIT_CONFIG_SYSTEM``
   environment variables to override global and system configuration
   paths. (Jelmer Vernooĳ, #1193)

 * ``dulwich.porcelain.diff``: Support diffing two commits
   and diffing cached and working tree. (Jelmer Vernooĳ)

 * Add ``format-patch`` command in porcelain. (Jelmer Vernooĳ)

 * Add functions for creating bundles and ``BundleClient``
   for interacting with bundles. (Jelmer Vernooĳ, #1246)

 * Add support for ``core.commitGraph`` configuration setting to control
   whether commit-graph files are used for performance optimization.
   (Jelmer Vernooĳ)

 * Add ``reflog`` command in porcelain. (Jelmer Vernooĳ)
