@@ -22,6 +22,7 @@
 """Implementation of Git filter drivers (clean/smudge filters)."""
 
 import logging
+import shlex
 import subprocess
 import threading
 from typing import TYPE_CHECKING, Callable, Optional
@@ -328,7 +329,7 @@ class ProcessFilterDriver:
             return data
 
         # Substitute %f placeholder with file path
-        cmd = self.smudge_cmd.replace("%f", path_str)
+        cmd = self.smudge_cmd.replace("%f", shlex.quote(path_str))
 
         try:
             result = subprocess.run(
@@ -342,7 +343,9 @@ class ProcessFilterDriver:
             return result.stdout
         except subprocess.CalledProcessError as e:
             if self.required:
-                raise FilterError(f"Required smudge filter failed: {e}")
+                raise FilterError(
+                    f"Required smudge filter failed: {e} {e.stderr} {e.stdout}"
+                )
             # If not required, log warning and return original data on failure
             logging.warning(f"Optional smudge filter failed: {e}")
             return data
